# Sectorwars2102

./: .env.example  .gitignore  CLAUDE.md  CLAUDE.md.legacy  CROSS-CLAUDE.gen1-archive.md  CROSS-CLAUDE.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
services/gameserver/: Dockerfile  README.md  backfill_market_prices.py  port_tester.py  pyproject.toml  repair_tradedocks.py  requirements.txt  spawn_npcs.py  start.sh
services/gameserver/alembic/versions/: 09d0c6e55927_add_beacon_charge_columns.py  150381baa0c5_drop_faction_missions.py  1aab831e9008_add_contracts_table.py  26ea004450dc_aria_data_streams.py  2d61e3b17ddd_add_combat_logs_region_id_snapshot.py  34d0fe6c1af1_add_message_moderation_status.py  40ce9a434884_aria_memory_type_canon_rename.py  4299dadf325b_add_aria_trust_persistence.py  4c7660b879f7_ship_registry_schema.py  5a30b799bb25_add_unique_constraint_on_resources_type.py  61b7e6f4ff93_add_storage_locker_and_cargo_deposit.py  641c08f78f35_add_suspect_lifecycle_columns.py  7643ee82d04b_rename_aria_quantum_cache_port_id_to_station_id.py  7b5c0a0c93a9_claim_licenses.py  7c2e91d6f4b8_add_special_formations_table.py  852befb04227_rename_aria_market_intelligence_port_id_to_station_id.py  86baeee81847_add_message_beacons.py  8b9aa2bd781d_add_player_last_distress_at.py  9210767b676a_backfill_class8_black_market_mistype.py  9381e9bf0626_add_resource_registry_columns.py  9c46d8ea0c11_seed_system_health_view_scope.py  9f1e216e2321_phantom_table_catchup_docking_port_.py  a1b2c3d4e5f6_add_migration_contracts.py  a1d4f9c7b3e2_phase4_schema_foundation.py  a1d7c4e92f6b_add_stations_security_tier.py  a1f4c9e0d6b3_player_last_activity_at.py  a2f6d9b41c83_add_ship_size_to_ship_specifications.py  a3f9e1c74b28_add_gate_construction_sites.py  a4d8e2f91b67_add_hangar_to_ships.py  a7c3e1f9b264_adr0005_compound_sector_identity_capital.py  a7c4e91b2d08_rbac_phase_e_seed_audit_review_scope.py  a7c9e2f1b8d4_add_player_research_ledger.py  a8d1f4e6c920_bang_generation_jobs.py  a9c4e7f21d83_npc_runtime_schema.py  b1f4c8a2d3e5_sector_celestials.py  b3d8f1a4c9e2_add_planet_structures.py  b3d8f1a92c4e_ship_mods_slot_grid_columns.py  b3e1b652afc8_add_ship_abandoned_state.py  b3e5c7a92f48_galaxy_audit_columns.py  b4d2f7e9a1c6_widen_player_owned_sector_cap_1500.py  (+56 more)
services/gameserver/i18n/en/: admin.json
services/gameserver/scripts/: schema_parity_check.py
services/gameserver/scripts/backfills/: cluster_color_remediation.sql  ship_resistance_backfill.sql
services/gameserver/src/: main.py
services/gameserver/src/api/: api.py
services/gameserver/src/auth/: admin.py  admin_scopes.py  dependencies.py  jwt.py  oauth.py  region_invite_signup.py  signup_rate_limit.py
services/gameserver/src/core/: aria_data_stream_seeder.py  commodity_economy.py  config.py  game_time.py  illegal_commodities.py  market_bootstrap.py  resource_registry_seeder.py  ship_specifications_seeder.py  station_class_map.py  station_security_tiers.py  trader_personalities.py
services/gameserver/src/data/: __init__.py  planet_names.py
services/gameserver/src/middleware/: galaxy_state_guard.py  rate_limit.py
services/gameserver/src/models/: __init__.py  admin_action_log.py  admin_scope_grant.py  aria_data_stream.py  aria_personal_intelligence.py  bang_generation_job.py  bounty_claim.py  cargo_wreck.py  claim_license.py  cluster.py  combat.py  combat_log.py  construction.py  contract.py  docking.py  drone.py  enhanced_ai_models.py  faction.py  fleet.py  galaxy.py  gate_construction_site.py  market_transaction.py  medal.py  message.py  message_beacon.py  migration_contract.py  multi_account.py  npc_character.py  pending_engagement.py  pirate_holding.py  pirate_kill_log.py  planet.py  player.py  player_analytics.py  player_warp_knowledge.py  port_ownership.py  processed_webhook_event.py  region.py  region_invite.py  resource.py  (+14 more)
services/gameserver/src/schemas/: auth.py  bang_config.py  bang_job.py
services/gameserver/src/services/: abandonment_service.py  admin_action_attempt.py  admin_action_log_service.py  ai_prompts.py  ai_provider_service.py  ai_security_service.py  ai_trading_service.py  analytics_service.py  aria_classifier_service.py  aria_data_index_service.py  aria_narration_service.py  aria_pattern_guard.py  aria_personal_intelligence_service.py  bang_import_service.py  bounty_service.py  building_catalog.py  celestial_service.py  citadel_service.py  combat_service.py  construction_service.py  contraband_service.py  contract_bulk.py  contract_dispute.py  contract_escrow_core.py  contract_generator.py  contract_insurance.py  contract_service.py  discovery_service.py  distress_service.py  docking_service.py  drone_service.py  economy_analytics_service.py  economy_faucet_service.py  emergent_reputation_service.py  enhanced_ai_service.py  enhanced_websocket_service.py  escape_pod_service.py  faction_service.py  first_login_service.py  fleet_service.py  (+71 more)
services/gameserver/src/utils/: error_handling.py  guard_personalities.py
services/gameserver/tests/: conftest.py  test_admin_message_stats.py
services/gameserver/tests/integration/: test_bang_apply.py  test_bang_concurrency.py  test_bang_endpoints.py  test_bang_orphan_recovery.py  test_core_loop_playthrough.py  test_galaxy_state_guard.py  test_npc_living_system.py
services/gameserver/tests/security/: test_ai_security_service.py
services/gameserver/tests/unit/: test_admin_colonies_morale.py  test_admin_contract_disputes.py  test_admin_drones_combat_log.py  test_admin_message_stats.py  test_admin_multi_account.py  test_admin_planet_crud.py  test_admin_planet_size_clamp.py  test_admin_reports.py  test_admin_route_optimization_feed.py  test_aria_cascade_path.py  test_aria_chat_llm.py  test_aria_cost_caps.py  test_aria_data_index.py  test_aria_encryption_key.py  test_aria_ga_removed.py  test_aria_market_observation.py  test_aria_memory_recall.py  test_aria_mi_column_savepoint.py  test_aria_narration_kernel.py  test_aria_observation_log.py  test_aria_progression.py  test_aria_prompt_defense.py  (+240 more)
(+830 files in other folders)
