[tool.poetry]
name = "sectorwars-gameserver"
version = "0.1.0"
description = "SectorWars 2102 Game Server"
authors = ["SectorWars Team"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Talks to the host docker daemon via /var/run/docker.sock for the bang
# sidecar spawn (see BangImportService.invoke_bang). Replaces the prior
# `docker-ce-cli` apt install in the Dockerfile, which bundled
# unpatched golang.org/x/{crypto,net} CVEs.
docker = "^7.1"
fastapi = ">=0.115,<0.126"
# Explicit floor: starlette <0.49.1 has an O(n²) DoS via Range-header
# merging in FileResponse (GHSA-2c2j-9gv5-cj73) and a separate multipart
# DoS (GHSA-f96h-pmfr-66vw). FastAPI pulls starlette transitively, so we
# pin the floor here to make sure poetry picks a patched version.
starlette = ">=0.49.1,<0.50"
uvicorn = {extras = ["standard"], version = ">=0.23.2,<0.49.0"}
websockets = ">=11.0.3,<17.0.0"
sqlalchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
asyncpg = ">=0.28,<0.32"
pydantic = {extras = ["email"], version = ">=2.3.0,<2.14.0"}
pydantic-settings = ">=2.0.3,<2.15.0"
alembic = "^1.12.0"
# Explicit pin: CVE needs >=48.0.1; cap at <49 to avoid taking an unreviewed
# major (48→49) on a package that underpins JWT + argon2 auth paths.
cryptography = ">=48.0.1,<49"
pyjwt = {extras = ["crypto"], version = "^2.10.0"}
python-multipart = ">=0.0.18"
passlib = {extras = ["argon2"], version = "^1.7.4"}
argon2-cffi = ">=23.1,<26.0"
httpx = ">=0.27,<0.29"
bcrypt = ">=4.0.1,<6.0.0"
email-validator = "^2.0.0"
python-dotenv = "^1.0.0"
redis = {extras = ["hiredis"], version = ">=5.0.1,<9.0.0"}
aioredis = "^2.0.1"
scikit-learn = "^1.3.0"
prophet = "^1.1.4"
pandas = "^2.0.3"
numpy = ">=1.24.3,<3.0.0"
scipy = "^1.11.2"
anthropic = ">=0.18.1,<0.106.0"
openai = ">=1.12,<3.0"
pyotp = "^2.9.0"
qrcode = {extras = ["pil"], version = ">=7.4.2,<9.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = ">=0.21.1,<1.5.0"
pytest-cov = ">=4.1,<8.0"
black = "^26.3.0"
isort = ">=5.12,<9.0"
flake8 = ">=6.1,<8.0"
mypy = ">=1.5.1,<3.0.0"
ruff = ">=0.0.287,<0.15.16"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["*/migrations/*"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90", "I", "N", "B", "S"]
ignore = ["S101", "B008"]
exclude = ["migrations"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"